--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,8 @@ version = "0.1.0"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 
 [extras]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test"]
+test = ["Test", "JSON"]
