trying codecov in github actions and remove travis

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,3 +22,16 @@ jobs:
         run: |
           julia --project=@. -e "using Pkg; Pkg.instantiate();"
           julia --project=@. -e "using Pkg; Pkg.test(\"ConstraintSolver\");"
+  coverage:
+    runs-on: ubuntu-latest
+     - uses: actions/checkout@v1.0.0
+      - name: "Set up Julia"
+        uses: julia-actions/setup-julia@v0.2
+        with:
+          version: 1.2.0
+          arch: x64
+      - name: "Run tests"
+        run: |
+          julia --project=@. -e "using Pkg; Pkg.instantiate();"
+          julia --project=@. -e "using Pkg; Pkg.test(\"ConstraintSolver\");"
+          julia --project=@. -e "using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())""
