--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,11 @@ jobs:
         with:
           version: ${{ matrix.julia-version }}
           arch: ${{ matrix.julia-arch }}
+      - name: "Build package"
+        uses: julia-actions/julia-buildpkg@master
       - name: "Run tests"
-        run: |
-          julia --project=@. -e "using Pkg; Pkg.instantiate();"
-          julia --project=@. -e "using Pkg; Pkg.test(\"ConstraintSolver\");"
+        uses: julia-actions/julia-runtest@master
+      - name: "CodeCov"
+        uses: julia-actions/julia-uploadcodecov@master
+        env:
+          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
