--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.1.0"
 
 [deps]
+JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 
 [extras]
