--- a/Project.toml
+++ b/Project.toml
@@ -15,5 +15,10 @@ JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
+[compat]
+JuMP = "^0.21.0"
+MathOptInterface = "^0.9.1"
+julia = "1"
+
 [targets]
 test = ["ForwardDiff", "LinearAlgebra", "Test", "JSON"]
