--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -4,3 +4,8 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
+
+[compat]
+JuMP = "^0.21.0"
+MathOptInterface = "^0.9.1"
+julia = "1"
