--- a/Project.toml
+++ b/Project.toml
@@ -4,11 +4,11 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.1.0"
 
 [deps]
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
-Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
 JuMP = "^0.21.0"
