--- a/Project.toml
+++ b/Project.toml
@@ -4,21 +4,22 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.1.0"
 
 [deps]
+Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
+
+[compat]
+JuMP = "^0.21.0"
+MathOptInterface = "^0.9.1"
+julia = "1"
 
 [extras]
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
-
-[compat]
-JuMP = "^0.21.0"
-MathOptInterface = "^0.9.1"
-julia = "1"
 
 [targets]
 test = ["ForwardDiff", "LinearAlgebra", "Test", "JSON"]
