--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.0.4, 1.2.0]
+        julia-version: [1.0.4, 1.3.0, '^1.4.0-rc1']
         julia-arch: [x64]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
