--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,14 +7,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        julia-version: [1.0.4, 1.2.0]
+        julia-version: [1.0.4, 1.3.0, '^1.4.0-rc1']
         julia-arch: [x64]
         os: [ubuntu-latest, windows-latest, macOS-latest]
     
     steps:
       - uses: actions/checkout@v1.0.0
       - name: "Set up Julia"
-        uses: julia-actions/setup-julia@v0.2
+        uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.julia-version }}
           arch: ${{ matrix.julia-arch }}
