--- a/Project.toml
+++ b/Project.toml
@@ -17,10 +17,12 @@ MathOptInterface = "^0.9.1"
 julia = "1"
 
 [extras]
+Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["ForwardDiff", "LinearAlgebra", "Test", "JSON"]
+test = ["ForwardDiff", "LinearAlgebra", "Test", "JSON", "Cbc", "GLPK"]
