--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,10 @@ jobs:
       - name: "Run tests"
         uses: julia-actions/julia-runtest@master
       - name: "CodeCov"
-        uses: julia-actions/julia-uploadcodecov@master
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+        - uses: julia-actions/julia-processcoverage@v1
+        - uses: codecov/codecov-action@v1
+          with:
+            file: ./lcov.info
+            flags: unittests
+            name: codecov-umbrella
+            fail_ci_if_error: true
