--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,9 @@ jobs:
         uses: julia-actions/julia-buildpkg@master
       - name: "Run tests"
         uses: julia-actions/julia-runtest@master
-      - name: "CodeCov"
+      - name: "Create CodeCov "
         - uses: julia-actions/julia-processcoverage@v1
+      - name: "Upload CodeCov"  
         - uses: codecov/codecov-action@v1
           with:
             file: ./lcov.info
