--- a/Project.toml
+++ b/Project.toml
@@ -12,14 +12,17 @@ MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+Formatting = "^0.4.1"
+JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.21.0"
 MathOptInterface = "^0.9.1"
+MatrixNetworks = "^1"
 julia = "1"
 
 [extras]
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
-GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
