--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,6 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.3.1"
 
 [deps]
-Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -13,6 +12,7 @@ MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
+StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 
 [compat]
 Formatting = "^0.4.1"
