--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.21.3"
+LightGraphs = "1"
 MathOptInterface = "^0.9.11"
 MatrixNetworks = "^1"
 julia = "1"
