--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.4.0"
 
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
