--- a/Project.toml
+++ b/Project.toml
@@ -14,7 +14,7 @@ MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
-DataStructures = "0.11-0.18"
+DataStructures = "0.11 - 0.18"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.21.3"
