--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.4.1"
 
 [deps]
+DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
@@ -13,6 +14,7 @@ MatrixNetworks = "4f449596-a032-5618-b826-5a251cb6dc11"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 [compat]
+DataStructures = "~0.11, ~0.12, ~0.13, ~0.14, ~0.15, ~0.16, ~0.17, ~0.18"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.21.3"
