--- a/Project.toml
+++ b/Project.toml
@@ -24,4 +24,6 @@ JuMP = "^0.21.3"
 LightGraphs = "1"
 MathOptInterface = "^0.9.11"
 MatrixNetworks = "^1"
+StatsBase = "^0.33"
+StatsFuns = "^0.9.5"
 julia = "^1.2"
