--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
 version = "0.6.10"
 
 [deps]
+ConstraintProgrammingExtensions = "b65d079e-ed98-51d9-b0db-edee61a5c5f8"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
