--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
+Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 ConstraintSolver = "e0e52ebd-5523-408d-9ca3-7641f1cd1405"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
