--- a/Project.toml
+++ b/Project.toml
@@ -29,4 +29,5 @@ MathOptInterface = "^0.9.11"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
 StatsFuns = "^0.9.5"
-julia = "^1.2"
+TableLogger = "^0.1"
+julia = "^1.6"
