--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,7 @@ Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
+TableLogger = "72b659bb-f61b-4d0d-9dbb-0f81f57d8545"
 
 [compat]
 ConstraintProgrammingExtensions = "^0.3"
@@ -28,4 +29,5 @@ MathOptInterface = "^0.9.11"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
 StatsFuns = "^0.9.5"
-julia = "^1.2"
+TableLogger = "^0.1"
+julia = "^1.6"
