--- a/Project.toml
+++ b/Project.toml
@@ -19,7 +19,7 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 TableLogger = "72b659bb-f61b-4d0d-9dbb-0f81f57d8545"
 
 [compat]
-ConstraintProgrammingExtensions = "^0.3"
+ConstraintProgrammingExtensions = "^0.3, 0.6"
 DataStructures = "~0.11, ~0.12, ~0.13, ~0.14, ~0.15, ~0.16, ~0.17, ~0.18"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
