--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -7,4 +7,5 @@ GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+PkgBenchmark = "32113eaa-f34f-5b0d-bd6c-c81e245fc73d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
