--- a/benchmark/Project.toml
+++ b/benchmark/Project.toml
@@ -1,5 +1,6 @@
 [deps]
 Arpack = "7d9fca2a-8960-54d3-9f78-7d1dccf2cb97"
+BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Cbc = "9961bab8-2fa3-5c5a-9d89-47fab24efd76"
 ConstraintSolver = "e0e52ebd-5523-408d-9ca3-7641f1cd1405"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
@@ -7,4 +8,5 @@ GitHub = "bc5e4493-9b4d-5f90-b8aa-2b2bcaad7a26"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
+PkgBenchmark = "32113eaa-f34f-5b0d-bd6c-c81e245fc73d"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
