--- a/Project.toml
+++ b/Project.toml
@@ -25,7 +25,7 @@ Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.21.3"
 LightGraphs = "1"
-MathOptInterface = "^0.9.11"
+MathOptInterface = "^0.9.11, 1"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
 StatsFuns = "^0.9.5"
