--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ConstraintSolver"
 uuid = "e0e52ebd-5523-408d-9ca3-7641f1cd1405"
 authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
-version = "0.8.2"
+version = "0.9.0"
 
 [deps]
 ConstraintProgrammingExtensions = "b65d079e-ed98-51d9-b0db-edee61a5c5f8"
@@ -25,7 +25,7 @@ Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
 JuMP = "^0.22"
 LightGraphs = "1"
-MathOptInterface = "^0.10"
+MathOptInterface = "^0.10, 1"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
 StatsFuns = "^0.9.5"
