--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ConstraintSolver"
 uuid = "e0e52ebd-5523-408d-9ca3-7641f1cd1405"
 authors = ["Ole Kröger <o.kroeger@opensourc.es>"]
-version = "0.8.2"
+version = "0.9.0"
 
 [deps]
 ConstraintProgrammingExtensions = "b65d079e-ed98-51d9-b0db-edee61a5c5f8"
@@ -19,13 +19,13 @@ StatsFuns = "4c63d2b9-4356-54db-8cca-17b64c39e42c"
 TableLogger = "72b659bb-f61b-4d0d-9dbb-0f81f57d8545"
 
 [compat]
-ConstraintProgrammingExtensions = "^0.3"
+ConstraintProgrammingExtensions = "^0.6"
 DataStructures = "~0.11, ~0.12, ~0.13, ~0.14, ~0.15, ~0.16, ~0.17, ~0.18"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
-JuMP = "^0.21.3"
+JuMP = "^0.22"
 LightGraphs = "1"
-MathOptInterface = "^0.9.11"
+MathOptInterface = "^0.10, 1"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
 StatsFuns = "^0.9.5"
