--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ ConstraintProgrammingExtensions = "^0.6"
 DataStructures = "~0.11, ~0.12, ~0.13, ~0.14, ~0.15, ~0.16, ~0.17, ~0.18"
 Formatting = "^0.4.1"
 JSON = "~0.18, ~0.19, ~0.20, ~0.21"
-JuMP = "^0.22"
+JuMP = "^0.22, 0.23"
 LightGraphs = "1"
 MathOptInterface = "^0.10, 1"
 MatrixNetworks = "^1"
