CompatHelper: bump compat for StatsFuns to 1, (keep existing compat)

--- a/Project.toml
+++ b/Project.toml
@@ -28,6 +28,6 @@ LightGraphs = "1"
 MathOptInterface = "^0.10, 1"
 MatrixNetworks = "^1"
 StatsBase = "^0.33"
-StatsFuns = "^0.9.5"
+StatsFuns = "^0.9.5, 1"
 TableLogger = "^0.1"
 julia = "^1.6"
